# completus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
.opencode/agents/: scout.md
data/eval/: samples.jsonl  samples.jsonl_results.jsonl
data/eval/results/: pass_at_k_merged.json
data/processed/: go_train.jsonl
docs/: architecture.md  notes.md
ollama/: Modelfile_go  Modelfile_python
paper/: abstract.tex  conclusion.tex  introduction.tex  main.tex  methodology.tex  references.bib  references.tex  related_work.tex  results.tex
results/autocomplete_eval/: go_coder_ollama_eval.md  python_coder_ollama_eval.md
src/: eda.py  prepare_data.py  run_eval.py  run_merge.py  run_train.py
src/data_pipeline/: __init__.py  _base.py  _constants.py  _pipeline.py  _stages.py
src/eval/: __init__.py  _compat.py  _config.py  _evaluator.py  _generator.py
src/merge_export/: __init__.py  _config.py  _merger.py
src/pipeline/: __init__.py  _base.py  _constants.py  _pipeline.py  _stages.py  _types.py  _utily.py
src/train/: __init__.py  _config.py  _trainer.py
