[project]
name = "completus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "human-eval>=1.0.3",
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "transformers>=5.5.0",
    "trl>=0.24.0",
    "unsloth>=2026.6.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
]
